--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <img class="img-responsive" src="http://placehold.it/900x300" alt="">
                 <hr>
                 <p>XCom 2 is the sequel game to XCOM: Enemy Unkown by Firaxis Games. It is a turn-based strategy RPG that revolves around resource and unit management while trying to retake the earth from its new alien overlords.</p>
-                <a class="btn btn-primary" href="#">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
+                <a class="btn btn-primary" href="xcomecse.html">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
 
                 <hr>
 
