--- a/index.html
+++ b/index.html
@@ -75,17 +75,17 @@
 
                 <!-- First Blog Post -->
                 <h2>
-                    <a href="#">XCOM 2</a>
+                    <a href="https://jakesterc30.github.io/xcomecse.html">XCOM 2</a>
                 </h2>
                 <p class="lead">
                     by <a href="index.php">Jacob Cano</a>
                 </p>
                 <p><span class="glyphicon glyphicon-time"></span> Posted on December 12th 2016</p>
                 <hr>
-                <img class="img-responsive" src="http://placehold.it/900x300" alt="">
+                <img class="img-responsive" src="CSE.jpg" alt="">
                 <hr>
                 <p>XCom 2 is the sequel game to XCOM: Enemy Unkown by Firaxis Games. It is a turn-based strategy RPG that revolves around resource and unit management while trying to retake the earth from its new alien overlords.</p>
-                <a class="btn btn-primary" href="xcomecse.html">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
+                <a class="btn btn-primary" href="https://jakesterc30.github.io/xcomecse.html">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
 
                 <hr>
 
