--- a/xcomcse.html
+++ b/xcomcse.html
@@ -86,7 +86,7 @@
                 <hr>
 
                 <!-- Preview Image -->
-                <img class="img-responsive" src="file:///C:/Users/Jacob/Pictures/CSE.jpg" alt="">
+                <img class="img-responsive" src="CSE.jpg" alt="">
 
                 <hr>
 
