--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Blog Home - Start Bootstrap Template</title>
+    <title>Jacob Cano's Video Game Blog</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -39,7 +39,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Start Bootstrap</a>
+                <a class="navbar-brand" href="#">Blog Home</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -69,54 +69,54 @@
             <div class="col-md-8">
 
                 <h1 class="page-header">
-                    Page Heading
-                    <small>Secondary Text</small>
+                    PC Games
+                    <small>Test</small>
                 </h1>
 
                 <!-- First Blog Post -->
                 <h2>
-                    <a href="#">Blog Post Title</a>
+                    <a href="https://jakesterc30.github.io/xcomecse.html">XCOM 2</a>
                 </h2>
                 <p class="lead">
-                    by <a href="index.php">Start Bootstrap</a>
+                    by <a href="index.php">Jacob Cano</a>
                 </p>
-                <p><span class="glyphicon glyphicon-time"></span> Posted on August 28, 2013 at 10:00 PM</p>
+                <p><span class="glyphicon glyphicon-time"></span> Posted on December 12th 2016</p>
                 <hr>
-                <img class="img-responsive" src="http://placehold.it/900x300" alt="">
+                <img class="img-responsive" src="CSE.jpg" alt="">
                 <hr>
                 <p>XCom 2 is the sequel game to XCOM: Enemy Unkown by Firaxis Games. It is a turn-based strategy RPG that revolves around resource and unit management while trying to retake the earth from its new alien overlords.</p>
-                <a class="btn btn-primary" href="#">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
+                <a class="btn btn-primary" href="xcomecse.html">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
 
                 <hr>
 
                 <!-- Second Blog Post -->
                 <h2>
-                    <a href="#">Blog Post Title</a>
+                    <a href="#">Rocket League</a>
                 </h2>
                 <p class="lead">
-                    by <a href="index.php">Start Bootstrap</a>
+                    by <a href="index.php">Jacob Cano</a>
                 </p>
-                <p><span class="glyphicon glyphicon-time"></span> Posted on August 28, 2013 at 10:45 PM</p>
+                <p><span class="glyphicon glyphicon-time"></span> Posted on December 13, 2016 at 10:45 PM</p>
                 <hr>
                 <img class="img-responsive" src="http://placehold.it/900x300" alt="">
                 <hr>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam, quasi, fugiat, asperiores harum voluptatum tenetur a possimus nesciunt quod accusamus saepe tempora ipsam distinctio minima dolorum perferendis labore impedit voluptates!</p>
+                <p>Cars and soccer, two very different things combined into one action-packed, fun game. Rocket League is the newest, and fastest growing mmo-soccer game out there.</p>
                 <a class="btn btn-primary" href="#">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
 
                 <hr>
 
                 <!-- Third Blog Post -->
                 <h2>
-                    <a href="#">Blog Post Title</a>
+                    <a href="#">Dark Souls</a>
                 </h2>
                 <p class="lead">
-                    by <a href="index.php">Start Bootstrap</a>
+                    by <a href="index.php">Jacob Cano</a>
                 </p>
-                <p><span class="glyphicon glyphicon-time"></span> Posted on August 28, 2013 at 10:45 PM</p>
+                <p><span class="glyphicon glyphicon-time"></span> Posted on December 15, 2016 at 2:00 PM</p>
                 <hr>
                 <img class="img-responsive" src="http://placehold.it/900x300" alt="">
                 <hr>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, voluptates, voluptas dolore ipsam cumque quam veniam accusantium laudantium adipisci architecto itaque dicta aperiam maiores provident id incidunt autem. Magni, ratione.</p>
+                <p>Dark Souls, a game not for the faint-hearted. One of the most difficult RPG's in the genre, and maybe the most difficult, rage inducing game I have ever played. I haven't even beaten it yet! A classic in the RPG genre and a staple in the gaming community as a whole.</p>
                 <a class="btn btn-primary" href="#">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
 
                 <hr>
@@ -150,6 +150,7 @@
                     <!-- /.input-group -->
                 </div>
 
+                
                 <!-- Blog Categories Well -->
                 <div class="well">
                     <h4>Blog Categories</h4>
@@ -184,10 +185,12 @@
                     <!-- /.row -->
                 </div>
 
+           
+
                 <!-- Side Widget Well -->
                 <div class="well">
-                    <h4>Side Widget Well</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, perspiciatis adipisci accusamus laudantium odit aliquam repellat tempore quos aspernatur vero.</p>
+                    <h4>Newest big release</h4>
+                    <p>Sid Meier's Civilization VI is the newest big release. It came out a few weeks ago, and is the next game in the Civ series, an extremely popular series amoung gamers of all ages. It has many of the same mechanics as Civ V but updated graphics and new engine. I am excited to give it a try and spend hundreds of ours playing this with my friends!</p>
                 </div>
 
             </div>
@@ -201,7 +204,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
+                    <p>Copyright &copy; Jacob Cano 2016</p>
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
