--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 </p>
                 <p><span class="glyphicon glyphicon-time"></span> Posted on December 13, 2016 at 10:45 PM</p>
                 <hr>
-                <img class="img-responsive" src="http://placehold.it/900x300" alt="">
+                <img class="img-responsive" src="rocket league cse.jpg" alt="">
                 <hr>
                 <p>Cars and soccer, two very different things combined into one action-packed, fun game. Rocket League is the newest, and fastest growing mmo-soccer game out there.</p>
                 <a class="btn btn-primary" href="#">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
@@ -150,7 +150,6 @@
                     <!-- /.input-group -->
                 </div>
 
-                
                 <!-- Blog Categories Well -->
                 <div class="well">
                     <h4>Blog Categories</h4>
