--- a/rlcse.html
+++ b/rlcse.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Blog Post - Start Bootstrap Template</title>
+    <title>Rocket Powered Battle Cars</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -71,7 +71,7 @@
                 <!-- Blog Post -->
 
                 <!-- Title -->
-                <h1>XCOM 2</h1>
+                <h1>Rocket League</h1>
 
                 <!-- Author -->
                 <p class="lead">
@@ -81,24 +81,25 @@
                 <hr>
 
                 <!-- Date/Time -->
-                <p><span class="glyphicon glyphicon-time"></span> Posted on December 12</p>
+                <p><span class="glyphicon glyphicon-time"></span> Posted on December 13</p>
 
                 <hr>
 
                 <!-- Preview Image -->
-                <img class="img-responsive" src="psy cse xcom.jpg" alt="">
+                <img class="img-responsive" src="rocket league basketball.jpg" alt="">
 
                 <hr>
 
                 <!-- Post Content -->
-                <p class="lead">Com 2 is the sequel game to XCOM: Enemy Unkown by Firaxis Games. It is a turn-based strategy RPG that revolves around resource and unit management while trying to retake the earth from its new alien overlords.</p>
-                <p>This is a game that I will always go back to. I have over 300 hours clocked into the prequel, XCOM: Enemy Unknown and plan on draining even more than that into XCOM 2. Each playthrough of the game feels different and is different.</p>
-                <p>XCOM 2 has in-depth character customization and the lore goes deep as well. The story flows smoothly from the first game, and previous characters have special guest appearances as well! I am not trying to spoil too much of the story, but the DLC gives characters you love and know good story arcs.</p>
-                <p>The gameplay takes a huge step up from the prequel, as the classes have the same core gameplay, but have many more activatable abilities that, in my opinion, enhance the quality of the gameplay and uniqueness of each class.</p>
-                <p>All in all this game is a solid sequel. It scales the difficulty up a bit from the first game at higher levels, but also provides a great experience for all players. The multiplayer is solid, but the matchmaking is weak. It takes a very long time to find a game to play. However, the multiplayer is a very small part of this game, so I would rate it a 9/10.</p>
+                <p class="lead">Cars and soccer, two very different things combined into one action-packed, fun game. Rocket League is the newest, and fastest growing mmo-soccer game out there.</p>
+                <p>Rocket League is one of the most entertaining game there is right now. It's fast, it's fun, and it has rocket powered cars. Matches are 5 minutes long and you will always want to play another one.</p>
+                <p>Rocket League's gameplay is solid. I prefer to use a controller, because in my opinion it makes driving MUCH easier when you are able to rotate a joystick 360 degrees than use 4 keys to maneuver.</p>
+                <p>You have the potential to pull off absolutely crazy moves, you can fly through the air to carry the ball into the net or absolutely break a car's axels with your creative ball hits and angels. Watching people who are actually good at the game(spoiler: not me) play is a blessing. It is so much fun to see all of the crazy shit they pull off, most of which I didn't even believe was possible.</p>
+                <p>This game has hours of fun with it's many unique game modes. It has hockey AND basketball availible for play, as well as many different maps and slightly game altering game modes, IE using a beachball instead of a soccer ball or infinite boost. However, there is a large learning curve as it can be a bit difficult to get the hang of the game. 7/10</p>
 
                 <hr>
 
+                <!-- Blog Comments -->
 
                 <!-- Comments Form -->
                 <div class="well">
@@ -168,8 +169,8 @@
 
                 <!-- Side Widget Well -->
                 <div class="well">
-                    <h4>Side Widget Well</h4>   
-                    <p>Hopefully this doesnt break anything LIKE EVERYTHING ELSE DID</p>
+                    <h4>Side Widget Well</h4>
+                    <p>Finally fixed it, maybe I'll figure out what to put here soon.</p>
                 </div>
 
             </div>
