--- a/darksouls.html
+++ b/darksouls.html
@@ -9,13 +9,13 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Jacob Cano's Video Game Blog</title>
+    <title>Prepare To...Rage Quit</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/blog-home.css" rel="stylesheet">
+    <link href="css/blog-post.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -39,7 +39,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Blog Home</a>
+                <a class="navbar-brand" href="#">Start Bootstrap</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -65,71 +65,56 @@
 
         <div class="row">
 
-            <!-- Blog Entries Column -->
-            <div class="col-md-8">
+            <!-- Blog Post Content Column -->
+            <div class="col-lg-8">
 
-                <h1 class="page-header">
-                    PC Games
-                    <small>Test</small>
-                </h1>
+                <!-- Blog Post -->
 
-                <!-- First Blog Post -->
-                <h2>
-                    <a href="https://jakesterc30.github.io/xcomecse.html">XCOM 2</a>
-                </h2>
+                <!-- Title -->
+                <h1>Dark Souls</h1>
+
+                <!-- Author -->
                 <p class="lead">
-                    by <a href="index.php">Jacob Cano</a>
+                    by <a href="#">Jacob Cano</a>
                 </p>
-                <p><span class="glyphicon glyphicon-time"></span> Posted on December 12th 2016</p>
-                <hr>
-                <img class="img-responsive" src="CSE.jpg" alt="">
-                <hr>
-                <p>XCom 2 is the sequel game to XCOM: Enemy Unkown by Firaxis Games. It is a turn-based strategy RPG that revolves around resource and unit management while trying to retake the earth from its new alien overlords.</p>
-                <a class="btn btn-primary" href="xcomecse.html">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
 
                 <hr>
 
-                <!-- Second Blog Post -->
-                <h2>
-                    <a href="#">Rocket League</a>
-                </h2>
-                <p class="lead">
-                    by <a href="index.php">Jacob Cano</a>
-                </p>
-                <p><span class="glyphicon glyphicon-time"></span> Posted on December 13, 2016 at 10:45 PM</p>
-                <hr>
-                <img class="img-responsive" src="rocket league cse.jpg" alt="">
-                <hr>
-                <p>Cars and soccer, two very different things combined into one action-packed, fun game. Rocket League is the newest, and fastest growing mmo-soccer game out there.</p>
-                <a class="btn btn-primary" href="#">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
+                <!-- Date/Time -->
+                <p><span class="glyphicon glyphicon-time"></span> Posted on December 15</p>
 
                 <hr>
 
-                <!-- Third Blog Post -->
-                <h2>
-                    <a href="#">Dark Souls</a>
-                </h2>
-                <p class="lead">
-                    by <a href="index.php">Jacob Cano</a>
-                </p>
-                <p><span class="glyphicon glyphicon-time"></span> Posted on December 15, 2016 at 2:00 PM</p>
-                <hr>
-                <img class="img-responsive" src="dscse.jpg" alt="">
-                <hr>
-                <p>Dark Souls, a game not for the faint-hearted. One of the most difficult RPG's in the genre, and maybe the most difficult, rage inducing game I have ever played. I haven't even beaten it yet! A classic in the RPG genre and a staple in the gaming community as a whole.</p>
-                <a class="btn btn-primary" href="#">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
+                <!-- Preview Image -->
+                <img class="img-responsive" src="sif.jpg" alt="">
 
                 <hr>
 
-                <!-- Pager -->
-                <ul class="pager">
-                    <li class="previous">
-                        <a href="#">&larr; Older</a>
-                    </li>
-                    <li class="next">
-                        <a href="#">Newer &rarr;</a>
-                    </li>
-                </ul>
+                <!-- Post Content -->
+                <p class="lead">Dark Souls, a game not for the faint-hearted. One of the most difficult RPG's in the genre, and maybe the most difficult, rage inducing game I have ever played. I haven't even beaten it yet! A classic in the RPG genre and a staple in the gaming community as a whole.</p>
+                <p>Another name for this game, which is entirely accurate, is Rage Quit Simulator. Dark Souls, especially the first one, is known for it's insane difficulty and crazy hard bosses. I personally had spent WEEKS attempting to kill one boss, then another few weeks attempting to find the next boss. I lost count of how many times I had rage quit this game during that time.</p>
+                <p>The legends say that the boss called Ornstein and Smough will destroy a persons will to have the game installed. That the mere thought of even attempting that boss again terrifies the player. I can't wait to fight it.</p>
+                <p>That's part of the beauty in Dark Souls however, spending countless hours trying to beat this one boss, and then the joy of finally accomplishing it, is a great feeling. And each boss is unique in it's own way, but the game still remains insanely difficult. The graphics are stunning and ahead of it's time, as you get beautiful high tower views and murky dungeons, and the music sets the mood very well. The lore is there if you want it, but I am not a huge lore junkie.</p>
+                <p>The only downside to Dark Souls is that it has low replayability. You could do multiple run throughs as different classes, but for the most part, only masochists replay this game. 8/10 </p>
+
+                <hr>
+
+                <!-- Blog Comments -->
+
+                <!-- Comments Form -->
+                <div class="well">
+                    <h4>Leave a Comment:</h4>
+                    <form role="form">
+                        <div class="form-group">
+                            <textarea class="form-control" rows="3"></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </form>
+                </div>
+
+                <hr>
+
+                
 
             </div>
 
@@ -166,7 +151,6 @@
                                 </li>
                             </ul>
                         </div>
-                        <!-- /.col-lg-6 -->
                         <div class="col-lg-6">
                             <ul class="list-unstyled">
                                 <li><a href="#">Category Name</a>
@@ -179,17 +163,14 @@
                                 </li>
                             </ul>
                         </div>
-                        <!-- /.col-lg-6 -->
                     </div>
                     <!-- /.row -->
                 </div>
 
-           
-
                 <!-- Side Widget Well -->
                 <div class="well">
-                    <h4>Newest big release</h4>
-                    <p>Sid Meier's Civilization VI is the newest big release. It came out a few weeks ago, and is the next game in the Civ series, an extremely popular series amoung gamers of all ages. It has many of the same mechanics as Civ V but updated graphics and new engine. I am excited to give it a try and spend hundreds of ours playing this with my friends!</p>
+                    <h4>Side Widget Well</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, perspiciatis adipisci accusamus laudantium odit aliquam repellat tempore quos aspernatur vero.</p>
                 </div>
 
             </div>
@@ -205,7 +186,6 @@
                 <div class="col-lg-12">
                     <p>Copyright &copy; Jacob Cano 2016</p>
                 </div>
-                <!-- /.col-lg-12 -->
             </div>
             <!-- /.row -->
         </footer>
