--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <img class="img-responsive" src="CSE.jpg" alt="">
                 <hr>
                 <p>XCom 2 is the sequel game to XCOM: Enemy Unkown by Firaxis Games. It is a turn-based strategy RPG that revolves around resource and unit management while trying to retake the earth from its new alien overlords.</p>
-                <a class="btn btn-primary" href="https://jakesterc30.github.io/xcomecse.html">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
+                <a class="btn btn-primary" href="https://jakesterc30.github.io/xcomcse.html">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
 
                 <hr>
 
@@ -101,7 +101,7 @@
                 <img class="img-responsive" src="rocket league cse.jpg" alt="">
                 <hr>
                 <p>Cars and soccer, two very different things combined into one action-packed, fun game. Rocket League is the newest, and fastest growing mmo-soccer game out there.</p>
-                <a class="btn btn-primary" href="#">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
+                <a class="btn btn-primary" href="https://jakesterc30.github.io/rlcse.html">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
 
                 <hr>
 
@@ -117,7 +117,7 @@
                 <img class="img-responsive" src="dscse.jpg" alt="">
                 <hr>
                 <p>Dark Souls, a game not for the faint-hearted. One of the most difficult RPG's in the genre, and maybe the most difficult, rage inducing game I have ever played. I haven't even beaten it yet! A classic in the RPG genre and a staple in the gaming community as a whole.</p>
-                <a class="btn btn-primary" href="#">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
+                <a class="btn btn-primary" href="https://jakesterc30.github.io/darksouls.html">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
 
                 <hr>
 
