--- a/index.html
+++ b/index.html
@@ -45,13 +45,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="#">About</a>
-                    </li>
-                    <li>
-                        <a href="#">Services</a>
-                    </li>
-                    <li>
-                        <a href="#">Contact</a>
+                        <a href="https://jakesterc30.github.io/about.html">About</a>
                     </li>
                 </ul>
             </div>
@@ -70,7 +64,6 @@
 
                 <h1 class="page-header">
                     PC Games
-                    <small>Test</small>
                 </h1>
 
                 <!-- First Blog Post -->
