--- a/xcomcse.html
+++ b/xcomcse.html
@@ -128,10 +128,45 @@
                     <!-- /.input-group -->
                 </div>
 
+                <!-- Blog Categories Well -->
+                <div class="well">
+                    <h4>Blog Categories</h4>
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <ul class="list-unstyled">
+                                <li><a href="#">Category Name</a>
+                                </li>
+                                <li><a href="#">Category Name</a>
+                                </li>
+                                <li><a href="#">Category Name</a>
+                                </li>
+                                <li><a href="#">Category Name</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <!-- /.col-lg-6 -->
+                        <div class="col-lg-6">
+                            <ul class="list-unstyled">
+                                <li><a href="#">Category Name</a>
+                                </li>
+                                <li><a href="#">Category Name</a>
+                                </li>
+                                <li><a href="#">Category Name</a>
+                                </li>
+                                <li><a href="#">Category Name</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <!-- /.col-lg-6 -->
+                    </div>
+                    <!-- /.row -->
+                </div>
+
+
                 <!-- Side Widget Well -->
                 <div class="well">
-                    <h4>Side Widget Well</h4>   
-                    <p>Hopefully this doesnt break anything LIKE EVERYTHING ELSE DID</p>
+                    <h4>DLC</h4>   
+                    <p>XCOM 2 has a few DLC availible. They range from adding in new solider customization options to adding in extra gear and missions within the game.</p>
                 </div>
 
             </div>
