--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
 
                 <!-- First Blog Post -->
                 <h2>
-                    <a href="https://jakesterc30.github.io/xcomecse.html">XCOM 2</a>
+                    <a href="https://jakesterc30.github.io/xcomcse.html">XCOM 2</a>
                 </h2>
                 <p class="lead">
-                    by <a href="index.php">Jacob Cano</a>
+                    by <a href="https://jakesterc30.github.io/about.html">Jacob Cano</a>
                 </p>
                 <p><span class="glyphicon glyphicon-time"></span> Posted on December 12th 2016</p>
                 <hr>
@@ -84,10 +84,10 @@
 
                 <!-- Second Blog Post -->
                 <h2>
-                    <a href="#">Rocket League</a>
+                    <a href="https://jakesterc30.github.io/rlcse.html">Rocket League</a>
                 </h2>
                 <p class="lead">
-                    by <a href="index.php">Jacob Cano</a>
+                    by <a href="https://jakesterc30.github.io/about.html">Jacob Cano</a>
                 </p>
                 <p><span class="glyphicon glyphicon-time"></span> Posted on December 13, 2016 at 10:45 PM</p>
                 <hr>
@@ -100,10 +100,10 @@
 
                 <!-- Third Blog Post -->
                 <h2>
-                    <a href="#">Dark Souls</a>
+                    <a href="https://jakesterc30.github.io/darksouls.html">Dark Souls</a>
                 </h2>
                 <p class="lead">
-                    by <a href="index.php">Jacob Cano</a>
+                    by <a href="https://jakesterc30.github.io/about.html">Jacob Cano</a>
                 </p>
                 <p><span class="glyphicon glyphicon-time"></span> Posted on December 15, 2016 at 2:00 PM</p>
                 <hr>
