--- a/rlcse.html
+++ b/rlcse.html
@@ -135,7 +135,7 @@
                 <!-- Side Widget Well -->
                 <div class="well">
                     <h4>DLC</h4>
-                    <p></p>
+                    <p>Rocket League DLC solely consists of aesthetic cars that effect gameplay minimally. The DLC decals are extremely please and as Rocket League moves towards a CSGO esque model of "skins" it will help their buisness model and hopefully they will continue to give us more high quality content as they have thus far.</p>
                 </div>
 
             </div>
