--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Home</a>
+                <a class="navbar-brand" href="https://jakesterc30.github.io">Home</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -55,7 +55,7 @@
     </nav>
 
     <!-- Full Width Image Header -->
-    <header class="header-image">
+    <header class="header-image" src="cspic.jpg">
         <div class="headline">
             <div class="container">
                 <h1>About The Blogger</h1>
