--- a/about.html
+++ b/about.html
@@ -55,7 +55,8 @@
     </nav>
 
     <!-- Full Width Image Header -->
-    <header class="header-image" src="cspic.jpg">
+    <header class="header-image">
+        <img src="cspic.jpg">
         <div class="headline">
             <div class="container">
                 <h1>About The Blogger</h1>
