--- a/about.html
+++ b/about.html
@@ -55,8 +55,7 @@
     </nav>
 
     <!-- Full Width Image Header -->
-    <header class="header-image">
-        <img src="cspic.jpg">
+    <header class="cspic.jpg">
         <div class="headline">
             <div class="container">
                 <h1>About The Blogger</h1>
